# computer-graphics

./: .gitignore  CMakeLists.txt  README.md  settings.yaml
shaders/: fshader.glsl  vshader.glsl  wallFragmentShader.glsl  wallVertexShader.glsl
src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Drawable.cpp  Drawable.h  Main.cpp  Main.h  Maze.cpp  Maze.h  Settings.cpp  Settings.h  ShaderProgram.cpp  ShaderProgram.h  Teapot.cpp  Teapot.h  allmodels.h  cube.cpp  cube.h  detailed_cube  main.cpp  main_file.cpp  main_file.h  model.cpp  model.h  shaderprogram.cpp  shaderprogram.h  teapot.cpp  teapot.h  torus.h
